--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "dat.gui": "^0.7.7",
+    "raw-loader": "^4.0.2",
     "stats.js": "^0.17.0",
     "three": "^0.124.0"
   },
