--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "serve": "^11.3.2",
     "ts-loader": "^8.0.14",
     "typescript": "^4.1.3",
+    "url-loader": "^4.1.1",
     "webpack": "^4.17.0",
     "webpack-dev-server": "^3.11.2"
   },
