--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "serve": "^11.3.2",
     "ts-loader": "^8.0.14",
     "typescript": "^4.1.3",
-    "webpack": "^4.17.0",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^3.0.0",
     "webpack-dev-server": "^3.11.2"
   },
   "description": ""
